--- a/.github/workflows/build_ciefp.yml
+++ b/.github/workflows/build_ciefp.yml
@@ -19,11 +19,13 @@ jobs:
             for f in ./build-input/enigma2/*.{tv,radio}; do
               sed -i '/SERVICE 4097/d' "$f"
             done
+            curl -o ./build-source/utf8snp.index -fsSL "https://raw.githubusercontent.com/picons/picons/master/build-source/utf8snp.index"
             curl -o ./build-source/snp.index -fsSL "https://raw.githubusercontent.com/picons/picons/master/build-source/snp.index" 
             curl -o ./build-source/srp.index -fsSL "https://raw.githubusercontent.com/picons/picons/master/build-source/srp.index"
+            bash 1-build-servicelist.sh utf8snp
             bash 1-build-servicelist.sh snp
             bash 1-build-servicelist.sh srp
-            mv ./build-output/servicelist-enigma2-snp.txt ./build-output/servicelist-enigma2-srp.txt -t ./ciefp
+            mv ./build-output/servicelist-enigma2-utf8snp.txt ./build-output/servicelist-enigma2-snp.txt ./build-output/servicelist-enigma2-srp.txt -t ./ciefp
             echo "$ciefp_latest_hash" > ./ciefp.hash
             git config --global user.name "${{ secrets.USER }}"
             git config --global user.email "${{ secrets.EMAIL }}"
